[build-system]
build-backend= "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "attrs",
    "certifi"
]

[project]
name = "splunk-sdk928"
authors = [
    {name = "Adam Taveras", email = "dev@tavnets.com"}
]
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "readme", "dependencies", "entry-points", "description"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = ["README.md", "CHANGELOG.md", "SECURITY.md"], content-type = "text/markdown"}
version = {attr = "splunksdk.__version__"}
description = {file = "DESCRIPTION"}

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest",
    "pytest-mock",
    "unittest",
    "dataclasses",
    "black",
    "pylint",
    "isort"
]

[tool.setuptools.packages.find]
where = ["src", "tests"]
include = ["splunksdk*"]
namespaces = true

[tool.coverage.run]
source = ["src"]

[tool.pylint.message_control]
max-line-length = 119
disable = ["import-error"]
ignore-paths = [
  "tests/*",
]

[tool.pylint.DESIGN]
max-attributes=12
max-args=6

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
